avoid final row cutoff

--- a/common.css
+++ b/common.css
@@ -260,6 +260,9 @@ ul.torrent_list li.torrent.compact {
 ul.torrent_list li.torrent.even {
     background-color: #333;
 }
+ul.torrent_list li.torrent:last-child {
+    margin-bottom: 2em;
+}
 ul.torrent_list li.torrent.selected {
     background-color: darkslategray;
 }
